# aichatsback

./: .env  .env.example  .gitignore  .opencommitignore  .pre-commit-config.yaml  Doc.md  Dockerfile  Dockerfile-railway  Makefile  Pipfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  railway.json  railway.toml  requirements-test.txt  requirements.txt  setup.cfg  vercel.json  wsgi.py
.github/workflows/: aicommit.yml  deploy-ec2.yml  python.yml
.postman/: api  api_3f9c5f0b-511e-4374-9478-26d1b9850d47
config/: __init__.py  constants.py  log.py  log_config.ini  pinecone.py  test_log.py
database/: pinecone_db.py
enums/: __init__.py  chat.py
middlewares/: __init__.py  health.py  log_requests.py
postman/collections/: AIChats.json  Conversation.json  v0.json
routers/: chat.py  chat_v1.py  chat_v2.py  chat_v3.py
scripts/: cert.pem  cert.sh  deploy.sh  ec2.sh  key.pem  nginx.conf  nginxupdate.sh  python-anywhere.sh
utils/: Dataclass.py  Json.py  Pandas.py  Time.py  cache.py  chat.py  progress_bar.py  test_progress_bar.py  test_uuid.py  uuid.py
utils/ai/: open_ai.py
utils/inputs/: html.py  pdf.py  test_html.py  test_pdf.py
utils/outputs/: test_t2s.py  text_to_speech.py
