[tool.poetry]
name = "aichats api backend"
version = "0.1.0"
description = "Deploys aichats server"
authors = ["Hiro<laciferin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
